# netmgr

./: CMakeLists.txt  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.alpine  LICENSE  Makefile  README.md  SECURITY.md  go.mod
.github/: FUNDING.yml
.github/workflows/: ci.yml  docs.yml  release.yml  security.yml
cmd/netmgr/: main.go
debian/: changelog  control  postinst  postrm  prerm  rules
docs/: about.md  index.md
docs/.vitepress/: config.mts
internal/bandwidth/: bandwidth.go
internal/common/: common.go
internal/diagnostic/: diagnostic.go
internal/dns/: dns.go
internal/firewall/: firewall.go
internal/forward/: forward.go
internal/interface_mgmt/: interface.go
internal/route/: route.go
internal/tunnel/: tunnel.go
scripts/: build.sh  create-appimage.sh  install.sh
src/: lib.rs  main.cpp  main.rs
src/cli/: cli.cpp  cli.hpp  mod.rs
src/common/: colors.rs  common.cpp  common.hpp  config.rs  mod.rs  platform.rs
src/modules/: bandwidth.cpp  bandwidth.hpp  bandwidth.rs  diagnostic.cpp  diagnostic.hpp  diagnostic.rs  dns.cpp  dns.hpp  dns.rs  firewall.cpp  firewall.hpp  firewall.rs  forward.cpp  forward.hpp  forward.rs  interface.cpp  interface.hpp  interface.rs  mod.rs  route.cpp  route.hpp  route.rs  tunnel.cpp  tunnel.hpp  tunnel.rs
