[package]
name = "netmgr"
version = "1.0.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Cross-platform network management tool"
license = "MIT"
repository = "https://github.com/yourusername/netmgr"

[[bin]]
name = "netmgr"
path = "src/main.rs"

[dependencies]
# CLI and argument parsing
clap = { version = "4.4", features = ["derive", "color"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Cross-platform utilities
crossterm = { version = "0.27", features = ["event-stream"] }
dirs = "5.0"

# Networking - Linux
[target.'cfg(target_os = "linux")'.dependencies]
netlink-packet-route = "0.17"
netlink-sys = "0.8"
rtnetlink = "0.13"
nix = "0.27"

# Networking - Windows
[target.'cfg(target_os = "windows")'.dependencies]
wmi = "0.13"
winapi = { version = "0.3", features = ["winsock2", "ws2def", "iphlpapi"] }
windows = { version = "0.52", features = [
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_System_Registry",
    "Win32_Foundation"
]}

# Networking - macOS
[target.'cfg(target_os = "macos")'.dependencies]
system-configuration = "0.5"
core-foundation = "0.9"

# Common networking
socket2 = "0.5"
ipnet = "2.9"
mac_address = "1.1"

[dev-dependencies]
tempfile = "3.8"

# Debian package configuration
[package.metadata.deb]
maintainer = "Your Name <your.email@example.com>"
copyright = "2024, Your Name <your.email@example.com>"
license-file = ["LICENSE", "4"]
extended-description = """\
A comprehensive cross-platform network management tool that provides \
interface management, routing, firewall configuration, DNS management, \
bandwidth monitoring, tunneling, and network diagnostics capabilities."""
depends = "$auto"
section = "net"
priority = "optional"
assets = [
    ["target/release/netmgr", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/netmgr/", "644"],
    ["LICENSE", "usr/share/doc/netmgr/", "644"],
]
conf-files = []
maintainer-scripts = "debian/"
systemd-units = { enable = false }
